# pippity

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/pippity/: __init__.py  module.py
tests/: test1.py
